@@ -2,6 +2,7 @@ Overview of changes in lightdm 0.1.3
 
     * Make default user configuration per-display
     * Only automatically login the first time
+    * Fix WebKit theme loading and automatic login
 
 Overview of changes in lightdm 0.1.2
 
